# restv2

./: .pre-commit-config.yaml  CMakeLists.txt
cmake/: CollectGitInfo.cmake  FindGarfieldOld.cmake  FindSQL.cmake  LibraryVersion.cmake  Testing.cmake  thisREST.cmake
cmake/scripts/: RESTConfig.cmake
config/: test.yaml
libraries/detector/: CMakeLists.txt
libraries/detector/examples/: MicromegasReadout.yaml  iaxo_d0_nominal.dec
libraries/detector/inc/: TRestDetectorReadout.h  TRestDetectorReadoutManager.h  TRestGDMLReadout.h  TRestMicromegasReadout.h
libraries/detector/macros/: GenerateReadout.C  ViewReadout.C
libraries/detector/src/: TRestDetectorReadout.cxx  TRestDetectorReadoutManager.cxx  TRestGDMLReadout.cxx  TRestMicromegasReadout.cxx
libraries/raw/: CMakeLists.txt
libraries/raw/inc/: TRestRawFemDAQToSignalProcess.h  TRestRawSignalAnalysisProcess.h  TRestRawSignalEvent.h
libraries/raw/src/: TRestRawFemDAQToSignalProcess.cxx  TRestRawSignalAnalysisProcess.cxx  TRestRawSignalEvent.cxx
source/: CMakeLists.txt
source/core/: CMakeLists.txt
source/core/inc/: TRestEvent.h  TRestEventProcess.h  TRestHits.h  TRestManager.h  TRestMetadata.h  TRestProcessManager.h  TRestPulseShapeAnalysis.h  TRestRun.h  TRestSystemOfUnits.h
source/core/src/: TRestEvent.cxx  TRestEventProcess.cxx  TRestHits.cxx  TRestManager.cxx  TRestMetadata.cxx  TRestProcessManager.cxx  TRestPulseShapeAnalysis.cxx  TRestRun.cxx
source/tools/: CMakeLists.txt
source/tools/inc/: TRestConstants.h  TRestLogManager.h  TRestSystemOfUnits.h  TRestTools.h
source/tools/src/: TRestLogManager.cxx  TRestTools.cxx
